Revert "Merge branch 'master' into bubblesValidation"
This reverts commit 47ab0f88c4bee99ffee90ff5fa13d6c8d056b74a, reversing
changes made to cbc23fe51bd4c15794020fde94b6067c5d35f6b3.